# voice-tutor

./: .gitignore  CLAUDE.md  README.md  RELOCATION_NOTES.md  app.py  bot.py  claims.py  cost_audit.py  documents.py  grounding.py  pyproject.toml  reconcile_costs.py  session_state.py  sessions.py  start.sh  usage_ledger.py  wiki.py
static/: study.html
tests/: _ss_coverage_driver.py  conftest.py  session_state_cases.py  test_claims.py  test_cost_audit.py  test_cost_audit_checks.py  test_cost_audit_report.py  test_documents_extraction.py  test_documents_list_load.py  test_documents_title.py  test_documents_validation.py  test_grounding_characterization.py  test_reconcile_costs.py  test_sanity.py  test_session_state_characterization.py  test_session_state_coverage.py  test_session_state_module.py  test_sessions_listing.py  test_usage_ledger.py
tests/fixtures/claims/: 12f379a0-5a04-4eb6-b349-1c3c0690fe17.txt  8050fe28-f897-4947-953d-7ca38fd2e0ad.txt  a9f59a8f-7d39-48c3-ba66-14e3b8c8d8c6.txt
tests/fixtures/claims/payloads/: 12f379a0-5a04-4eb6-b349-1c3c0690fe17.raw.txt  8050fe28-f897-4947-953d-7ca38fd2e0ad.raw.txt  a9f59a8f-7d39-48c3-ba66-14e3b8c8d8c6.raw.txt
